--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     </h1>
     <h2>
-        <button style="background-color: rgb(249, 249, 180); color: #333333; border-radius: 5px;" onclick="window.location.reload()">REFRESH PEGE HERE!</button><br>
+        <button style="background-color: rgb(249, 249, 180); color: #333333; border-radius: 5px;" onclick="window.location.reload()">REFRESH PAGE HERE!</button><br>
         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target=_blank title="Click me for a surprise">
         click me :D
     </a><br>
